; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_filter.c_efx_filter_clear_rx.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_filter.c_efx_filter_clear_rx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.efx_nic = type { i32 }

@EFX_FILTER_TABLE_RX_IP = common dso_local global i32 0, align 4
@EFX_FILTER_TABLE_RX_MAC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @efx_filter_clear_rx(%struct.efx_nic* %0, i32 %1) #0 {
  %3 = alloca %struct.efx_nic*, align 8
  %4 = alloca i32, align 4
  store %struct.efx_nic* %0, %struct.efx_nic** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.efx_nic*, %struct.efx_nic** %3, align 8
  %6 = load i32, i32* @EFX_FILTER_TABLE_RX_IP, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @efx_filter_table_clear(%struct.efx_nic* %5, i32 %6, i32 %7)
  %9 = load %struct.efx_nic*, %struct.efx_nic** %3, align 8
  %10 = load i32, i32* @EFX_FILTER_TABLE_RX_MAC, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @efx_filter_table_clear(%struct.efx_nic* %9, i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @efx_filter_table_clear(%struct.efx_nic*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
